# gym-pybullet-drones

./: .gitignore  CITATION.cff  LICENSE  README.md  _config.yml  agent3_multiagent.sh  agent3_multiagent.sh.o12947580  agent3_multiagent.sh.o12947583  agent3_multiagent.sh.o12947585  agent3_multiagent.sh.o12947586  agent3_multiagent.sh.o12947588  agent3_multiagent.sh.o12947590  agent3_multiagent.sh.o12947591  build_project.sh  index.md  monitorq_s.sh  pypi_description.md  pyproject.toml  run_flight.py  run_learning.py  run_physics.py  run_physics_standalone.py  run_trace.py  setup.py  utils.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  push.yml  release.yml  test.yml
PDM_project/: MPC.py  MPC_old.py  RRT.py  RRTStar.py  RRTStar_new.py  env.py  env_RRT.py  final_RRT.py  final_main.py  helpers.py  main.py  main_MPC.py  main_RRT.py  main_RRTDIffFlat.py  mpc_sim_main.py  new_env.py  our_env.py
PDM_project/others/: mpc_sim_main.py
_layouts/: default.html
assets/css/: style.scss
assignments/: README.md  aer1216_fall2020_hw1_ctrl.py  aer1216_fall2020_hw1_sim.py  aer1216_fall2020_hw2_ctrl.py  aer1216_fall2020_hw2_sim.py  hw1_control.py  hw1_simulation.py  pybullet_example.py
examples/: _dev.py  compare.py  dev.py  downwash.py  fly.py  groundeffect.py  learn.py  parallelism.sh  physics.py  run_flight.py  run_learning.py  run_trace.py  sa_flight.py  sa_learning.py  shoot_and_defend.py  test_physics.py  utils.py  velocity.py  velocityTony.py
experiments/: 01_first_flight.py  02_pid_hover.py  03_multi_drone.py  sa_script.bash  singleagent.py
experiments/learning/: common_constants.py  eval.py  ma_common.py  multiagent.py  multiagent_copy.py  sa_script.bash  sa_script.slrm  script.slrm  shared_constants.py  singleagent.py  slurm_singleagent.slrm  test.py  test_multiagent.py  test_singleagent.py
experiments/performance/: parallelism.sh  script.py
files/: conda_req_list.txt  ffmpeg_png2mp4.sh
gym_pybullet_drones/: __init__.py
gym_pybullet_drones/assets/: architrave.urdf  beam.urdf  beam_horizontal.urdf  beta-presets-bak.txt  beta-traj.csv  big_box.urdf  box.urdf  cf2.dae  cf2p.urdf  cf2x.urdf  clone_bfs.sh  cube.urdf  cylinder.urdf  ffmpeg_png2mp4.sh  gate.urdf  hb.urdf  maze.urdf  racer.urdf  red_cylinder.urdf  simple_tree.urdf  sphere.urdf
gym_pybullet_drones/assets_obstacles/: test.urdf  wall.urdf
gym_pybullet_drones/control/: BaseControl.py  CTBRControl.py  DSLPIDControl.py  MRAC.py  MultiDroneControl.py  SimplePIDControl.py  SingleDroneControl.py  __init__.py
gym_pybullet_drones/envs/: Aviary.py  BaseAviary.py  BaseRLAviary.py  BetaAviary.py  CFAviary.py  Control.py  ControlType.py  CtrlAviary.py  CustomBaseAviary.py  CustomCtrlAviary.py  CustomVelocityAviary.py  DroneModel.py  DynAviary.py  DynCtrlAviary.py  HoverAviary.py  LeaderFollowerAviary.py  Logger.py  MARLFlockAviary.py  MultiDroneEnv.py  MultiDroneUserDefinedFunctions.py  MultiHoverAviary.py  NavigationAviary.py  NewBaseRLAviary.py  NormDynCtrlAviary.py  ProblemSpecificFunctions.py  RLAviary.py  RLFunctions.py  RLTakeoffAviary.py  RlHoverAviary.py  SingleDroneEnv.py  SingleDroneUserDefinedFunctions.py  Symbolic2DAviary.py  UserDefinedFunctions.py  VelocityAviary.py  VisionAviary.py  VisionCtrlAviary.py  __init__.py
gym_pybullet_drones/examples/: USV_UAV.py  USV_trajectory.py  api.py  beta.py  beta2.py  cf.py  cff-bit.py  compare.py  create_environment.py  create_environment2.py  custom_pid.py  debug.py  downwash.py  drl_uav_usv.py  fly.py  fly_im.py  fly_occupancy.py  fly_occupancy_nonvisible.py  gradient_descent.py  groundeffect.py  just_visualize.py  learn.py  learn2.py  learn_SAC.py  learn_SAC_GR.py  model_communication quality.py  mrac.py  pid.py  pid_velocity.py  play.py  runner.py  velocity.py
gym_pybullet_drones/new_files/: circle_many_drones.py  circle_one_drone.py  cone_many_drones.py  cone_one_drone.py  cyl_many_drones.py  cyl_one_drone.py  cylindrical_example.py  ellipse_many_drones.py  ellipse_one_drones.py  init.txt  relative_many_movement_example.py  relative_one_movement_example.py  second_smart_union.py  smart_union.py  spherical_cringe_example.py  spherical_example.py  spiral_many_drones.py  spiral_one_drone.py  square_vel.py  square_withZ_vel.py  triple_offset.py  union_of_two_movements.py
ros2/: .gitignore  ros2_and_pkg_setups.bash  ros2_and_pkg_setups.zsh  source_ros2_ws.bash  source_ros2_ws.zsh
ros2/install/rrt_python_gym/share/rrt_python_gym/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/src/custom_interface/: CMakeLists.txt  package.xml
ros2/src/custom_interface/msg/: TrajMsg.msg
ros2/src/custom_interface/srv/: UavControl.srv
ros2/src/custom_interface_gym/: CMakeLists.txt  package.xml
ros2/src/custom_interface_gym/msg/: TrajMsg.msg
ros2/src/ros2_gym_pybullet_drones/: package.xml  setup.cfg  setup.py
ros2/src/ros2_gym_pybullet_drones/ros2_gym_pybullet_drones/: aviary_wrapper.py  dep_to_csv  hover_control.py  joystick_control.py  pcd_to_csv.py  random_control.py  trajectory.py  trajectory_eg.py  vision_trajectory_tracker.py  vision_wrapper.py  vision_wrapper_client.py  waypoint_control.py  waypoint_control_server.py  waypoint_eg.py
ros2/src/rrt_path_finder/: CMakeLists.txt  package.xml
ros2/src/rrt_path_finder/include/rrt_path_finder/: corridor_finder.h  datatype.h  firi.hpp  gcopter.hpp  geo_utils.hpp  kdtree.h  lbfgs.hpp  quickhull.hpp  root_finder.hpp  sfc_gen.hpp  trajectory.hpp  voxel_map.hpp
ros2/src/rrt_path_finder/src/: corridor_finder.cpp  kdtree.c  rrt_new_hover.cpp  rrt_new_test.cpp  rrt_node.cpp  rrt_node_new_replan.cpp  trajectory_server.cpp
ros2/src/rrt_python/: package.xml  setup.cfg  setup.py
ros2/src/rrt_python/rrt_python/: corridor_finder.py  kdtree_c.py  rrt_node.py  trajectory.py
scripts/: run_flight.py  run_learning.py  run_physics.py  run_physics_standalone.py  run_trace.py  test_physics.py  utils.py
tests/: test_add_ball.py  test_add_planes.py  test_build.py  test_examples.py  test_experiments.py
validation_traces/: trace.pkl
(+191 files in other folders)
