[tool.poetry]
name = "gym-pybullet-drones"
version = "2.0.0"
description = "PyBullet Gym environments for single and multi-agent reinforcement learning of quadcopter control"
authors = ["Jacopo Panerati <jacopo.panerati@utoronto.ca>"]
license = "MIT"
readme = "pypi_description.md"
repository = "https://github.com/utiasDSL/gym-pybullet-drones"
packages = [
    { include = "gym_pybullet_drones" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2"
scipy = "^1.10"
transforms3d = "^0.4.1"
matplotlib = "^3.7"
pytest = ">=7.3, <9.0"
pybullet = "^3.2.5"
gymnasium = "~=1.2"
stable-baselines3 = "^2.0.0"
control = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
