[tool.poetry]
name = "gym-pybullet-drones"
version = "2.1.0"
description = "PyBullet Gym environments for single and multi-agent reinforcement learning of quadcopter control"
authors = ["Jacopo Panerati <jacopo.panerati@utoronto.ca>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/utiasDSL/gym-pybullet-drones"
packages = [
    { include = "gym_pybullet_drones" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2"
scipy = "^1.15"
transforms3d = "^0.4"
matplotlib = "^3.10"
pybullet = "^3.2.7"
gymnasium = "^1.2"
stable-baselines3 = "^2.8"
control = "^0.10.2"
pytest = "^9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
