[develop]
script_dir=$base/lib/ros2_gym_pybullet_drones

[install]
install_scripts=$base/lib/ros2_gym_pybullet_drones

[options]
packages = find:
install_requires =
    rclpy
    std_msgs

[options.package_data]
ros2_gym_pybullet_drones = srv/*.srv

[options.entry_points]
console_scripts =
    aviary_wrapper = ros2_gym_pybullet_drones.aviary_wrapper:main
    random_control = ros2_gym_pybullet_drones.random_control:main
    vision_wrapper = ros2_gym_pybullet_drones.vision_wrapper:main
    vision_client = ros2_gym_pybullet_drones.vision_wrapper_client:main
    waypoint_server = ros2_gym_pybullet_drones.waypoint_control_server:main
    waypoint_control = ros2_gym_pybullet_drones.waypoint_control:main
    hover_control = ros2_gym_pybullet_drones.hover_control:main
    waypoint_eg = ros2_gym_pybullet_drones.waypoint_eg:main
