<?xml version="1.0"?>
<package format="3">
  <name>point_cloud_planner</name>
  <version>0.1.0</version>
  <description>ROS2 Point Cloud Planner Node using RRT Path Finding</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 Dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <!-- External Python Dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-plotly</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Additional information for users -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
